[gd_scene load_steps=2 format=3 uid="uid://home001"]

[ext_resource type="Script" path="res://src/ui/home.gd" id="1_script"]

[node name="Home" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.12, 1)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UILayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Casa"
horizontal_alignment = 1

[node name="CombatButton" type="Button" parent="UILayer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Combate"

[node name="SettingsButton" type="Button" parent="UILayer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Ajustes"

[node name="LogoutButton" type="Button" parent="UILayer"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Salir"
